--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server/index.tsx",
+    "dev": "nodemon src/server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,13 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@types/express": "^4.17.21",
     "express": "^4.18.2",
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "prisma": "^5.7.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
